--- a/index.html
+++ b/index.html
@@ -85,7 +85,13 @@
                         </div>
                     </section>
                     <img class="imgSilhouette" src="Google_Contacts_files/photo_silhouette_e02a5f5deb3ffc173119a01bc9575490.png" alt="photo_silhoute">
-                    <div class="libelle">+ Libellés</div>
+                    <div class="spaceBtwn libelle">
+                        <div>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="1.5em" height="1.5em" viewBox="0 0 50 50"><path fill="none" stroke="#306cfe" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M25 10.417v29.166M10.417 25h29.166z"/>
+                            </svg>
+                        </div>
+                        <div>Libellés</div>
+                    </div>
                     <div class="spaceBtwn">
                             <div>
                                 <svg xmlns="http://www.w3.org/2000/svg" width="2em" height="2em" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
@@ -140,7 +146,7 @@
                             </svg>
                         </div>
                         <div>
-                            <input class="inputForm" type="text" id="telephone" placeholder="+243" style="border: solid 2px black; width: 4rem;">
+                            <input class="inputForm" type="text" id="codePays" placeholder="+243" style="border: solid 2px black; width: 4rem;">
                             <input class="inputForm" type="text" id="telephone" placeholder="Téléphone" style="border: solid 2px black; width: 15.5rem;">
                         </div>
                     </div>
@@ -176,7 +182,7 @@
             <section class="allContact">
                     <h3>Contacts</h3>
                 <div class="contactArr"></div>
-                <table>
+                <table class="table">
                     <tr>
                         <td>Titre</td>
                         <td>Email</td>
@@ -185,9 +191,7 @@
                         <td>Buttons</td>
                     </tr>
                     <hr>
-                    <tr></tr>
                 </table>
-                <div class="table"></div>
             </section>
             <section class="creationLibellé">
                     <h1>Créer un libellé</h1><br>
