--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
                             <div>
                                 <div>
                                     <!-- <label for="firstName">Prénom</label><br> -->
-                                    <input class="inputForm" type="text" id="firstName" placeholder="Prénom" style="border: solid 2px black;">
+                                    <input class="inputForm" type="text" id="firstName" placeholder="Prénom" style="border: solid 1px black;">
                                 </div>
                                 <div>
                                     <!-- <label for="lastName">Nom</label><br> -->
-                                    <input class="inputForm" type="text" id="lastName" placeholder="Nom" style="border: solid 2px black; margin-top: 10px;">
+                                    <input class="inputForm" type="text" id="lastName" placeholder="Nom" style="border: solid 1px black; margin-top: 10px;">
                                 </div>
                             </div>    
                     </div>  
@@ -117,11 +117,11 @@
                         <div>
                             <div>
                                 <!-- <label for="entreprise">Entreprise</label><br> -->
-                                <input class="inputForm" type="text" id="entreprise" placeholder="Entreprise" style="border: solid 2px black;">
+                                <input class="inputForm" type="text" id="entreprise" placeholder="Entreprise" style="border: solid 1px black;">
                             </div>
                             <div>
                                 <!-- <label for="fonction">Fonction</label><br> -->
-                                <input class="inputForm" type="text" id="fonction" placeholder="Fonction" style="border: solid 2px black; margin-top: 10px;">
+                                <input class="inputForm" type="text" id="fonction" placeholder="Fonction" style="border: solid 1px black; margin-top: 10px;">
                             </div>  
                         </div>  
                     </div>        
@@ -132,7 +132,7 @@
                         </div> 
                         <div>
                             <div>
-                                <input class="inputForm" type="email" id="email" placeholder="Email" style="border: solid 2px black;">
+                                <input class="inputForm" type="email" id="email" placeholder="Email" style="border: solid 1px black;">
                             </div>
                             <div class="button">
                                 <div class="inputMail" style="margin-top: 10px;"></div>
@@ -146,8 +146,8 @@
                             </svg>
                         </div>
                         <div>
-                            <input class="inputForm" type="text" id="codePays" placeholder="+243" style="border: solid 2px black; width: 4rem;">
-                            <input class="inputForm" type="text" id="telephone" placeholder="Téléphone" style="border: solid 2px black; width: 15.5rem;">
+                            <input class="inputForm" type="text" id="codePays" placeholder="+243" style="border: solid 1px black; width: 4rem;">
+                            <input class="inputForm" type="text" id="telephone" placeholder="Téléphone" style="border: solid 1px black; width: 15.5rem;">
                         </div>
                     </div>
                     <div class="spaceBtwn">
@@ -157,15 +157,15 @@
                         </div>
                             <div>
                                 <!-- <label for="start">date</label><br> -->
-                                <input class="inputForm" id="start" type="text" placeholder="Jour" name="trip-start" style="border: solid 2px black; width: 4rem;"/>
+                                <input class="inputForm" id="start" type="text" placeholder="Jour" name="trip-start" style="border: solid 1px black; width: 4rem;"/>
                             </div>
                             <div>
                                 <!-- <label for="start">date</label><br> -->
-                                <input class="inputForm" id="start" type="text" placeholder="Mois" name="trip-start" style="border: solid 2px black; width: 10rem;"/>
+                                <input class="inputForm" id="start" type="text" placeholder="Mois" name="trip-start" style="border: solid 1px black; width: 10rem;"/>
                             </div>
                             <div>
                                 <!-- <label for="start">date</label><br> -->
-                                <input class="inputForm" id="start" type="text" placeholder="Année" name="trip-start" style="border: solid 2px black; width: 5.2rem;"/>
+                                <input class="inputForm" id="start" type="text" placeholder="Année" name="trip-start" style="border: solid 1px black; width: 5.2rem;"/>
                             </div>
                         </div> 
                         <div class="spaceBtwn">
@@ -175,7 +175,7 @@
                             </div>
                             <div>
                                 <!-- <label for="notes">Notes</label><br> -->
-                                <textarea class="textareaform" type="text" id="notes" placeholder="Notes" style="border: solid 2px black;"></textarea>
+                                <textarea class="textareaform" type="text" id="notes" placeholder="Notes" style="border: solid 1px black;"></textarea>
                             </div>
                         </div>
                 </form>
@@ -193,17 +193,19 @@
                     <hr>
                 </table>
             </section>
-            <section class="creationLibellé">
-                    <h1>Créer un libellé</h1><br>
-                    <div>
-                        <label for="libellé">Nouveau libellé</label><br>
-                        <input class="inputForm" type="text" id="libellé" style="border: solid 1px ;"><br>
-                    </div>
-                    <div class="btnLibellé">
-                        <button class="closedWindow">Non, ne rien faire</button>
-                        <button class="submitLibellé">Enregistrer</button>
-                </div>
-            </section>
+            <div class="libelleposition">
+                <div class="creationLibellé">
+                        <h1>Créer un libellé</h1><br>
+                        <div>
+                            <label for="libellé">Nouveau libellé</label><br>
+                            <input class="inputForm" type="text" id="libellé" style="border: solid 1px ;"><br>
+                        </div>
+                        <div class="btnLibellé">
+                            <button class="closedWindow">Non, ne rien faire</button>
+                            <button class="submitLibellé">Enregistrer</button>
+                        </div>
+                </sdiv>
+            </div>
             <button class="createContactMobile">
                 <div><svg class="strocStyleMobile" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
                         <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4"/>
